[gd_scene load_steps=6 format=3 uid="uid://bmr1wuaorpuic"]

[ext_resource type="PackedScene" uid="uid://c5itypqr0bp4v" path="res://Scenes/Transition.tscn" id="1_7nojl"]
[ext_resource type="Script" path="res://Scripts/GUI.gd" id="1_gji7b"]
[ext_resource type="Texture2D" uid="uid://b84dh64sm6ie8" path="res://Assets/Sprites/Pixel Platformer/Tiles/tile_0044.png" id="3_wk2lk"]
[ext_resource type="Texture2D" uid="uid://ch12sxcaohwtv" path="res://Assets/Sprites/Pixel Platformer/Tiles/tile_0152.png" id="4_0uef1"]
[ext_resource type="Texture2D" uid="uid://d3p0mbd8wvcs7" path="res://Assets/Sprites/Custom/PlayerBlock.png" id="5_hwi4y"]

[node name="GUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_gji7b")

[node name="CircleTransition" parent="." instance=ExtResource("1_7nojl")]

[node name="GridContainer" type="GridContainer" parent="."]
offset_right = 165.0
offset_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="HealthTexture" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3_wk2lk")
stretch_mode = 5

[node name="BulletTexture" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("4_0uef1")
expand_mode = 2
stretch_mode = 5

[node name="BlockTexture" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("5_hwi4y")
expand_mode = 2
stretch_mode = 5

[node name="PlayerHealth" type="RichTextLabel" parent="GridContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]h"
fit_content = true
autowrap_mode = 0

[node name="PlayerBullets" type="RichTextLabel" parent="GridContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]bu"
fit_content = true
autowrap_mode = 0

[node name="PlayerBlocks" type="RichTextLabel" parent="GridContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]bl"
fit_content = true
autowrap_mode = 0

[node name="GEMTooltip" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Expl" type="RichTextLabel" parent="GEMTooltip"]
layout_mode = 0
offset_left = 11.0
offset_top = 5.0
offset_right = 345.0
offset_bottom = 132.0
text = "Use ARROW KEYS  to move the crosshair. Your bridge will contain all blocks stuck to you.
"

[node name="ExplEnd" type="RichTextLabel" parent="GEMTooltip"]
layout_mode = 0
offset_left = 811.0
offset_top = 6.0
offset_right = 1145.0
offset_bottom = 133.0
bbcode_enabled = true
text = "Press [b]ENTER[/b] to submit your bridge!
Press [b]BACKSPACE[/b] to reset the bridge!"

[node name="Pause" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="Pause"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -356.0
offset_top = -193.0
offset_right = 356.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.54, 0.54, 0.54, 0.815686)

[node name="Expl2" type="RichTextLabel" parent="Pause"]
offset_left = 410.0
offset_top = 11.0
offset_right = 744.0
offset_bottom = 138.0
text = "Enemies give you 3 blocks and 1 bullet upon their death."

[node name="ExplHelp" type="RichTextLabel" parent="Pause"]
offset_left = 15.0
offset_top = 579.0
offset_right = 445.0
offset_bottom = 654.0
text = "Visiting terminals resets your health and bullets. Visit them whenever you're in a pinch!"

[node name="ExplHelp2" type="RichTextLabel" parent="Pause"]
offset_left = 648.0
offset_top = 583.0
offset_right = 1189.0
offset_bottom = 658.0
text = "Your bridges will also remain after you die, so you won't need to rebuild them every time that happens."

[node name="ExplHelp3" type="RichTextLabel" parent="Pause"]
offset_left = 254.0
offset_top = 141.0
offset_right = 911.0
offset_bottom = 508.0
bbcode_enabled = true
text = "[center]
[font_size=30]PAUSED[/font_size]


Use ARROW KEYS to move.
Use C or SPACEBAR to jump.
Use Z to grab/climb.
Use A to shoot.
Use S to interact.
Use DOWN or LEFT SHIFT to crouch.



(Press ESC to continue)"
